--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -928,7 +928,9 @@
       "heading_newest_podcasts": "Найновіші аудіобаки",
       "heading_popular_podcasts": "Найпопулярніші аудіобаки",
       "podcasts": "Аудіобаки",
-      "view_more": "Більше переглянути"
+      "view_more": "Більше переглянути",
+      "require_cookies": "Щоб переглянути це відео, прийміть усі файли cookie.",
+      "cookie_preferences": "Налаштування файлів cookie"
     },
     "register-preview-page": {},
     "register-email-page": {
