--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -851,6 +851,17 @@
       "assessment_completed_description": "Дякуємо за проходження оцінювання. Ваші відповіді збережено та буде використано, щоб допомогти вам.",
       "assessment_completed_button": "Повернутися на головну"
     },
+    "baseline-assessment-dashboard": {
+      "heading": "Ваша базова оцінка",
+      "no_assessment_text": "Ви ще не завершили базову оцінку. Завершіть її, щоб отримати персоналізовані рекомендації щодо вашого психічного здоров'я.",
+      "start_new_assessment": "Розпочати оцінку",
+      "completed": "Завершено",
+      "in_progress": "В процесі",
+      "continue": "Продовжити",
+      "view": "Переглянути результати",
+      "view_detailed_results": "Переглянути детальні результати",
+      "started_at": "Розпочато {{date}}"
+    },
     "baseline-assesment-result": {
       "assessment_completed": "Оцінювання завершено",
       "loading_results": "Завантаження результатів...",
