Refactor: Navbar burger menu

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,6 +29,7 @@
 
       "dark": "Dark",
       "light": "Light",
+      "high_contrast": "High Contrast",
 
       "cookie_banner_header": "We value your privacy",
       "cookie_banner_text": "This website uses cookies to enhance and secure your browsing experience. By using our website, you agree to our <0>Cookie Policy</0>.",
