--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -28,6 +28,7 @@
 
       "dark": "Қараңғы",
       "light": "Жарық",
+      "high_contrast": "Жоғары контраст",
 
       "cookie_banner_header": "Біз сіздің құпиялылығыңызды бағалаймыз",
       "cookie_banner_text": "Бұл веб-сайт сіздің шолу тәжірибеңізді жақсарту және қорғау үшін cookie файлдарын пайдаланады. Біздің веб-сайтты пайдалану арқылы сіз біздің <0>Cookie саясатына</0> келісесіз.",
