--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -29,6 +29,7 @@
 
       "dark": "Ciemny",
       "light": "Jasny",
+      "high_contrast": "Wysoki kontrast",
 
       "cookie_banner_header": "Cenimy Twoją prywatność",
       "cookie_banner_text": "Ta strona używa plików cookie, aby poprawić i zabezpieczyć Twoje doświadczenia podczas przeglądania. Korzystając z naszej strony, zgadzasz się na naszą <0>Politykę Cookie</0>.",
