--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -28,6 +28,7 @@
 
       "dark": "Темный",
       "light": "Светлый",
+      "high_contrast": "Высокая контрастность",
 
       "cookie_banner_header": "Мы ценим вашу конфиденциальность",
       "cookie_banner_text": "Этот веб-сайт использует файлы cookie для улучшения и обеспечения безопасности вашего просмотра. Используя наш веб-сайт, вы соглашаетесь с нашей <0>Политикой использования файлов cookie.</0>",
