--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -29,6 +29,7 @@
 
       "dark": "Темний",
       "light": "Світлий",
+      "high_contrast": "Висока контрастність",
 
       "cookie_banner_header": "Ми цінуємо вашу конфіденційність",
       "cookie_banner_text": "Цей вебсайт використовує файли cookie для покращення та захисту вашого перегляду. Використовуючи наш вебсайт, ви погоджуєтеся з нашою <0>Політикою щодо файлів cookie</0>.",
