--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -23,6 +23,7 @@
       "submit": "Ուղարկել",
       "dark": "Մուգ",
       "light": "Լուսավոր",
+      "high_contrast": "Բարձր հակադրություն",
       "page_5": "Organizations",
       "cookie_banner_header": "We value your privacy",
       "cookie_banner_text": "This website uses cookies to enhance and secure your browsing experience. By using our website, you agree to our <0>Cookie Policy</0>.",
