Add: Poland banner to the Welcome block

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -281,7 +281,8 @@
       "language": "Language",
       "placeholder": "Select",
       "button": "Continue",
-      "client": "Client"
+      "client": "Client",
+      "poland_description": "uSupport is a mental health and well-being platform designed for youth (16–24)."
     },
     "articles": {
       "heading": "Information portal",
