--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -283,6 +283,15 @@
       "number_of_more_options": "{{count}} ավելին",
       "read": "Read"
     },
+    "welcome": {
+      "heading": "Բարի գալուստ",
+      "country": "Երկիր",
+      "language": "Լեզու",
+      "placeholder": "Ընտրել",
+      "button": "Շարունակել",
+      "client": "Հաճախորդ",
+      "poland_description": "uSupport-ը մտավոր առողջության և բարեկեցության հարթակ է, որը նախատեսված է երիտասարդների համար (16-24 տարեկան):"
+    },
     "give-suggestion": {
       "heading": "Ներկայացրեք մեզ ձեր առաջարկությունները",
       "subheading": "Չեք կարողանում գտնել ձեզ հետաքրքրող տեղեկատվությո՞ւնը։ Առաջարկեք թեման և մենք կփորձենք անդրադառնալ դրան։",
