--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -280,7 +280,8 @@
       "language": "Язык",
       "placeholder": "Выбрать",
       "button": "Продолжить",
-      "client": "Клиент"
+      "client": "Клиент",
+      "poland_description": "uSupport — это платформа психического здоровья и благополучия, предназначенная для молодежи (16-24 года)."
     },
     "articles": {
       "heading": "Информационный портал",
