--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -280,7 +280,8 @@
       "language": "Тіл",
       "placeholder": "Таңдау",
       "button": "Жалғастыру",
-      "client": "Клиент"
+      "client": "Клиент",
+      "poland_description": "uSupport жастарға (16-24 жас) арналған психикалық денсаулық пен әл-ауқат платформасы."
     },
     "articles": {
       "heading": "Ақпараттық портал",
