Add: personalization to the Organizations

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -701,7 +701,11 @@
       "address": "Address",
       "phone": "Phone",
       "email": "Email",
-      "any": "Any"
+      "any": "Any",
+      "personalize": "Անհատականացնել",
+      "personalization": "Անհատականացում",
+      "personalization_modal_text": "Ձեր կարիքներին համապատասխան անհատականացված կազմակերպական առաջարկություններ ստանալու համար, խնդրում ենք նախ լրացնել մեր արագ բազային գնահատումը: Սա օգնում է մեզ հասկանալ ձեր նախասիրությունները և նպատակները՝ ամենակարևոր առաջարկությունները տրամադրելու համար:",
+      "personalization_modal_cta_label": "Լրացնել գնահատումը"
     },
     "organization-overview": {
       "error_loading_data": "An error occurred while loading the organization data",
@@ -1163,7 +1167,9 @@
       "button_label_1": "Տեսա/ձայնային խորհրդատվություն",
       "button_label_2": "Տեքստային խորհրդատվություն",
       "client_joined": "Հաճախորդը միացել է խորհրդատվությանը",
-      "error": "Տեղի է ունեցել սխալ։ Խնդրում ենք կրկին փորձել"
+      "error": "Տեղի է ունեցել սխալ։ Խնդրում ենք կրկին փորձել",
+      "permissions_error": "Թույլատրեք տեսախցիկի և խոսափողի օգտագործումը",
+      "allow_permissions": "Եթե ցանկանում եք խոսել հաճախորդի հետ, տվեք թույլատվությունները ձեր դիտարկչի կարգավորումներում կամ հասցեի տողի տեղեկատվության նշանից։"
     },
     "select-avatar": {
       "heading": "Փոխել պրոֆիլի նկարը",
