--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -732,7 +732,11 @@
       "address": "Адрес",
       "phone": "Телефон",
       "email": "E-mail",
-      "any": "Любой"
+      "any": "Любой",
+      "personalize": "Персонализировать",
+      "personalization": "Персонализация",
+      "personalization_modal_text": "Чтобы получить персонализированные рекомендации по организации, адаптированные к вашим потребностям, пожалуйста, сначала пройдите нашу быструю базовую оценку. Это поможет нам понять ваши предпочтения и цели, чтобы предоставить наиболее актуальные предложения.",
+      "personalization_modal_cta_label": "Пройти оценку"
     },
     "organization-overview": {
       "error_loading_data": "При загрузке данных организации возникла ошибка",
@@ -1256,7 +1260,9 @@
       "button_label_1": "Видео/аудио консультация",
       "button_label_2": "Текстовая консультация",
       "client_joined": "Клиент присоединился к консультации",
-      "error": "Произошла ошибка. Пожалуйста, попробуйте еще раз"
+      "error": "Произошла ошибка. Пожалуйста, попробуйте еще раз",
+      "permissions_error": "Предоставьте разрешения для камеры и микрофона",
+      "allow_permissions": "Если вы хотите поговорить с клиентом, разрешите это в настройках браузера или через значок информации в адресной строке."
     },
     "select-avatar": {
       "heading": "Изменить фото профиля",
