--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -732,7 +732,11 @@
       "address": "Адреса",
       "phone": "Телефон",
       "email": "E-mail",
-      "any": "Будь-який"
+      "any": "Будь-який",
+      "personalize": "Персоналізувати",
+      "personalization": "Персоналізація",
+      "personalization_modal_text": "Щоб отримати персоналізовані рекомендації з організації, адаптовані до ваших потреб, будь ласка, спочатку пройдіть нашу швидку базову оцінку. Це допоможе нам зрозуміти ваші вподобання та цілі, щоб надати найбільш відповідні пропозиції.",
+      "personalization_modal_cta_label": "Пройти оцінку"
     },
     "organization-overview": {
       "error_loading_data": "Під час завантаження даних організації сталася помилка",
@@ -1260,7 +1264,9 @@
       "button_label_1": "Відео/аудіо консультація",
       "button_label_2": "Текстова консультація",
       "client_joined": "Клієнт/ка долучився/лася до консультації",
-      "error": "Виникла помилка. Спробуй ще раз"
+      "error": "Виникла помилка. Спробуй ще раз",
+      "permissions_error": "Надайте дозволи на камеру та мікрофон",
+      "allow_permissions": "Якщо ви хочете поговорити з клієнтом, надайте ці дозволи в налаштуваннях браузера або через значок інформації на адресному рядку."
     },
     "select-avatar": {
       "heading": "Зміни фото профілю",
