--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -718,7 +718,11 @@
       "address": "Adres",
       "phone": "Telefon",
       "email": "E-mail",
-      "any": "Dowolny"
+      "any": "Dowolny",
+      "personalize": "Personalizuj",
+      "personalization": "Personalizacja",
+      "personalization_modal_text": "Aby otrzymać spersonalizowane rekomendacje organizacyjne dostosowane do Twoich potrzeb, najpierw wypełnij naszą szybką ocenę bazową. Pomoże nam to zrozumieć Twoje preferencje i cele, aby zapewnić najbardziej odpowiednie sugestie.",
+      "personalization_modal_cta_label": "Wypełnij ocenę"
     },
     "organization-overview": {
       "error_loading_data": "Wystąpił błąd podczas ładowania danych organizacji",
@@ -1241,7 +1245,9 @@
       "button_label_1": "Konsultacja wideo/audio",
       "button_label_2": "Konsultacja tekstowa",
       "client_joined": "Klient/ka dołączył/a do konsultacji",
-      "error": "Wystąpił błąd. Spróbuj ponownie"
+      "error": "Wystąpił błąd. Spróbuj ponownie",
+      "permissions_error": "Zezwól na dostęp do kamery i mikrofonu",
+      "allow_permissions": "Jeśli chcesz porozmawiać z klientem, włącz te uprawnienia w ustawieniach przeglądarki lub z ikony informacji na pasku adresu."
     },
     "select-avatar": {
       "heading": "Zmień zdjęcie profilowe",
