Add: emergency-related labels and messages to mood tracking localization files

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -454,7 +454,8 @@
       "mood_tracker": "Տրամադրության ստուգիչ",
       "additional_comment_placeholder": "Ի՞նչն ստիպեց այդպես զգալ։",
       "submit_mood_track": "Ուղարկել",
-      "add_mood_tracker_success": "Ձեր օրվա տրամադրությունը բարեհաջող ավելացվել է։"
+      "add_mood_tracker_success": "Ձեր օրվա տրամադրությունը բարեհաջող ավելացվել է։",
+      "emergency_label": "Սա վերաբերում է կյանքի իրադարձության կամ կրիտիկական իրավիճակի՞։"
     },
     "mascot-welcome-header": {
       "welcome": "Բարի վերադարձ {{հաճախորդի անունը}}",
@@ -602,7 +603,8 @@
       "worried": "Մտահոգ",
       "you_felt": "Դուք զգացել եք",
       "comment_text": "և մեկնաբանել եք․:",
-      "no_result": "Արդյունքներ չեն գտնվել"
+      "no_result": "Արդյունքներ չեն գտնվել",
+      "critical_text": "Կապված է կյանքի իրադարձության կամ կրիտիկական իրավիճակի հետ"
     },
     "mascot-header-MyQA": {
       "heading": "Իմ հարցուպատասխանը",
