--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -463,7 +463,8 @@
       "mood_tracker": "Mood Tracker",
       "additional_comment_placeholder": "What made you feel this way?",
       "submit_mood_track": "Submit",
-      "add_mood_tracker_success": "Your daily mood was added successfully"
+      "add_mood_tracker_success": "Your daily mood was added successfully",
+      "emergency_label": "Does this relate to a life event or critical situation?"
     },
     "mascot-welcome-header": {
       "welcome": "Welcome back {{name}}!",
@@ -616,7 +617,8 @@
       "worried": "Worried",
       "you_felt": "You felt",
       "comment_text": "and you commented:",
-      "no_result": "No results found."
+      "no_result": "No results found.",
+      "critical_text": "Related to a life event or critical situation"
     },
     "mascot-header-MyQA": {
       "heading": "My Q&A",
