--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -463,7 +463,8 @@
       "mood_tracker": "Монітор настрою",
       "additional_comment_placeholder": "Що є причиною того, що ти себе так почуваєш?",
       "submit_mood_track": "Надішли",
-      "add_mood_tracker_success": "Сьогоднішній настрій додано"
+      "add_mood_tracker_success": "Сьогоднішній настрій додано",
+      "emergency_label": "Це стосується життєвої події чи критичної ситуації?"
     },
     "mascot-welcome-header": {
       "welcome": "З поверненням, {{name}}!",
@@ -616,7 +617,8 @@
       "worried": "Схвильованим/ою",
       "you_felt": "Ти відчув/ла себе",
       "comment_text": "і прокоментував/ла:",
-      "no_result": "Жодних результатів не знайдено."
+      "no_result": "Жодних результатів не знайдено.",
+      "critical_text": "Пов’язане з життєвою подією чи критичною ситуацією"
     },
     "mascot-header-MyQA": {
       "heading": "Мої запитання й відповіді",
