Add: Implement DeleteMoodTrackerHistory functionality and localization support

--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -357,6 +357,8 @@
       "delete_account": "Видалити обліковий запис",
       "logout": "Вийти",
       "delete_chat": "Очистити історію чату",
+      "delete_mood_tracker": "Очистити історію монітора настрою",
+
       "dropdown_sex_label": "Стать",
       "dropdown_year_label": "Рік народження",
       "sex_male": "Чоловік",
@@ -1336,6 +1338,13 @@
       "confirm": "Так, видалити всі мої дані з чату",
       "cancel": "Ні, збережи мої дані з чату",
       "success": "Твої дані з чату видалено."
+    },
+    "delete-mood-tracker-history": {
+      "heading": "Ви впевнені, що хочете видалити всі дані трекера настрою?",
+      "subheading": "Цю дію неможливо скасувати.",
+      "confirm": "Так, видалити всі мої дані трекера настрою",
+      "cancel": "Ні, залишити мої дані трекера настрою",
+      "success": "Ваші дані трекера настрою було успішно видалено."
     },
     "baseline-assesment-modal": {
       "heading": "Базове оцінювання",
