--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -370,6 +370,7 @@
       "delete_account": "Удалить аккаунт",
       "logout": "Выйти",
       "delete_chat": "Очистить историю чата",
+      "delete_mood_tracker": "Очистить историю трекера настроения",
 
       "dropdown_sex_label": "Пол",
       "dropdown_year_label": "Год рождения",
@@ -1373,6 +1374,13 @@
       "confirm": "Да, удалить всю мою историю чата",
       "cancel": "Нет, сохранить мою историю чата",
       "success": "Ваша история чата была успешно удалена."
+    },
+    "delete-mood-tracker-history": {
+      "heading": "Вы уверены, что хотите удалить все данные трекера настроения?",
+      "subheading": "Это действие необратимо.",
+      "confirm": "Да, удалить все мои данные трекера настроения",
+      "cancel": "Нет, оставить мои данные трекера настроения",
+      "success": "Ваши данные трекера настроения были успешно удалены."
     },
     "baseline-assesment-modal": {
       "heading": "Базовая оценка",
