--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -531,6 +531,8 @@
       "consultation_cancellation": "Вы успешно <0>отменили</0> консультацию с <0>{{providerName}}</0>, <0>запланированную</0> на <0>{{date}}</0> с <0>{{startHour}}</0> до <0>{{endHour}}</0>",
       "consultation_cancellation_provider": "Консультант <0>{{providerName}} отменил</0> консультацию, <0>запланированную</0> на <0>{{date}}</0> с <0>{{startHour}}</0> до <0>{{endHour}}</0>",
       "consultation_remind_start": "<0>Предстоящая консультация</0> начнется через <0>{{minutes}} минут</0>",
+      "consultation_remind_start_24_hours_before": "<0>Ваша консультация с {{providerName}}</0> начнется через <0>24 часа</0>",
+      "consultation_remind_start_48_hours_before": "<0>Ваша консультация с {{providerName}}</0> начнется через <0>48 часов</0>",
       "consultation_suggestion": "<0>{{providerName}}</0> предложил консультацию на <0>{{date}}</0> с <0>{{startHour}}</0> до <0>{{endHour}}</0>",
       "consultation_suggestion_booking": "Вы приняли предложенную консультацию от <0>{{providerName}}</0> на <0>{{date}}</0> с <0>{{startHour}}</0> до <0>{{endHour}}</0>",
       "consultation_suggestion_cancellation": "Вы отклонили предложенную консультацию от <0>{{providerName}}</0> на <0>{{date}}</0> с <0>{{startHour}}</0> до <0>{{endHour}}</0>",
