Returned poland description for pl and uk

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -270,7 +270,8 @@
       "language": "Język",
       "placeholder": "Wybierz",
       "button": "Kontynuuj",
-      "client": "Klient"
+      "client": "Klient",
+      "poland_description": "uSupport to platforma zdrowia psychicznego i dobrego samopoczucia przeznaczona dla młodych osób (16-24)"
     },
     "articles": {
       "heading": "Portal informacyjny",
