--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -270,7 +270,8 @@
       "language": "Мова",
       "placeholder": "Обрати",
       "button": "Продовжити",
-      "client": "Клієнт/ка"
+      "client": "Клієнт/ка",
+      "poland_description": "uSupport — це платформа психічного здоров’я та добробуту, призначена для молодих людей (16–24)"
     },
     "articles": {
       "heading": "Інформаційний портал",
