--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -448,7 +448,8 @@
       "mood_tracker": "Monitor nastroju",
       "additional_comment_placeholder": "Co sprawiło, że tak się poczułeś/aś?",
       "submit_mood_track": "Prześlij",
-      "add_mood_tracker_success": "Twój dzisiejszy nastrój został pomyślnie dodany"
+      "add_mood_tracker_success": "Twój dzisiejszy nastrój został pomyślnie dodany",
+      "emergency_label": "Czy to dotyczy wydarzenia życiowego lub sytuacji krytycznej?"
     },
     "mascot-welcome-header": {
       "welcome": "Witamy z powrotem {{name}}!",
@@ -711,7 +712,11 @@
       "address": "Adres",
       "phone": "Telefon",
       "email": "E-mail",
-      "any": "Dowolny"
+      "any": "Dowolny",
+      "personalize": "Personalizuj",
+      "personalization": "Personalizacja",
+      "personalization_modal_text": "Aby otrzymać spersonalizowane rekomendacje organizacyjne dostosowane do Twoich potrzeb, najpierw wypełnij naszą szybką ocenę bazową. Pomoże nam to zrozumieć Twoje preferencje i cele, aby zapewnić najbardziej odpowiednie sugestie.",
+      "personalization_modal_cta_label": "Wypełnij ocenę"
     },
     "organization-overview": {
       "error_loading_data": "Wystąpił błąd podczas ładowania danych organizacji",
@@ -924,13 +929,13 @@
       "heading_2": "Witamy z powrotem"
     },
     "articles-page": {
+      "heading": "Artykuły",
       "heading_default": "Wszystkie artykuły",
       "heading_newest": "Najnowsze artykuły",
       "heading_most_read": "Najczęściej czytane artykuły",
       "subheading_default": "Wszystkie artykuły można znaleźć tutaj",
       "subheading_newest": "Tutaj możesz znaleźć najnowsze artykuły",
-      "subheading_most_read": "Tutaj możesz znaleźć najczęściej czytane artykuły ze wszystkich kategorii",
-      "heading": "Artykuły"
+      "subheading_most_read": "Tutaj możesz znaleźć najczęściej czytane artykuły ze wszystkich kategorii"
     },
     "article-information": {
       "heading": "Więcej artykułów",
@@ -1233,7 +1238,9 @@
       "button_label_1": "Konsultacja wideo/audio",
       "button_label_2": "Konsultacja tekstowa",
       "client_joined": "Klient/ka dołączył/a do konsultacji",
-      "error": "Wystąpił błąd. Spróbuj ponownie"
+      "error": "Wystąpił błąd. Spróbuj ponownie",
+      "permissions_error": "Zezwól na dostęp do kamery i mikrofonu",
+      "allow_permissions": "Jeśli chcesz porozmawiać z klientem, włącz te uprawnienia w ustawieniach przeglądarki lub z ikony informacji na pasku adresu."
     },
     "select-avatar": {
       "heading": "Zmień zdjęcie profilowe",
