--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -448,7 +448,8 @@
       "mood_tracker": "Монітор настрою",
       "additional_comment_placeholder": "Що є причиною того, що ти себе так почуваєш?",
       "submit_mood_track": "Надішли",
-      "add_mood_tracker_success": "Сьогоднішній настрій додано"
+      "add_mood_tracker_success": "Сьогоднішній настрій додано",
+      "emergency_label": "Це стосується життєвої події чи критичної ситуації?"
     },
     "mascot-welcome-header": {
       "welcome": "З поверненням, {{name}}!",
@@ -711,7 +712,11 @@
       "address": "Адреса",
       "phone": "Телефон",
       "email": "E-mail",
-      "any": "Будь-який"
+      "any": "Будь-який",
+      "personalize": "Персоналізувати",
+      "personalization": "Персоналізація",
+      "personalization_modal_text": "Щоб отримати персоналізовані рекомендації з організації, адаптовані до ваших потреб, будь ласка, спочатку пройдіть нашу швидку базову оцінку. Це допоможе нам зрозуміти ваші вподобання та цілі, щоб надати найбільш відповідні пропозиції.",
+      "personalization_modal_cta_label": "Пройти оцінку"
     },
     "organization-overview": {
       "error_loading_data": "Під час завантаження даних організації сталася помилка",
@@ -1233,7 +1238,9 @@
       "button_label_1": "Відео/аудіо консультація",
       "button_label_2": "Текстова консультація",
       "client_joined": "Клієнт/ка долучився/лася до консультації",
-      "error": "Виникла помилка. Спробуй ще раз"
+      "error": "Виникла помилка. Спробуй ще раз",
+      "permissions_error": "Надайте дозволи на камеру та мікрофон",
+      "allow_permissions": "Якщо ви хочете поговорити з клієнтом, надайте ці дозволи в налаштуваннях браузера або через значок інформації на адресному рядку."
     },
     "select-avatar": {
       "heading": "Зміни фото профілю",
