Add: Integrate video player in ConsultationsDashboard for KZ, kk and ru language

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -452,7 +452,9 @@
       "september": "September",
       "october": "October",
       "november": "November",
-      "december": "December"
+      "december": "December",
+      "require_cookies": "To view this video, please accept all cookies.",
+      "cookie_preferences": "Cookie preferences"
     },
     "mood-tracker": {
       "happy": "Happy",
