--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -451,7 +451,9 @@
       "september": "қыркүйек",
       "october": "қазан",
       "november": "қараша",
-      "december": "желтоқсан"
+      "december": "желтоқсан",
+      "require_cookies": "Бұл бейнені көру үшін барлық cookie файлдарын қабылдаңыз.",
+      "cookie_preferences": "Cookie параметрлері"
     },
     "mood-tracker": {
       "happy": "Бақытты",
